// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateAppSpec T-0004-041: serializePlan produces deterministic output for a given plan (snapshot) 1`] = `
"This generation MUST honor the following plan exactly:
- Output exactly 1 view, with view ids matching "main".
- Set initialViewId to "main".
- Honor the navigation pattern. If navigation === 'none', emit zero navigate actions anywhere in the spec.
- Do not invent extra screens; do not collapse screens.

PLAN:
{
  "version": 1,
  "archetype": "Calculator",
  "screens": [
    {
      "id": "main",
      "role": "home",
      "purpose": "enter inputs and see result",
      "key_components": [
        "Form",
        "Button",
        "Text"
      ]
    }
  ],
  "navigation": "none"
}"
`;

exports[`generateAppSpec T-0004-041b: serializePlan uses plural "views" and lists all screen ids for a multi-screen plan (snapshot) 1`] = `
"This generation MUST honor the following plan exactly:
- Output exactly 2 views, with view ids matching "dashboard", "add_entry".
- Set initialViewId to "dashboard".
- Honor the navigation pattern. If navigation === 'none', emit zero navigate actions anywhere in the spec.
- Do not invent extra screens; do not collapse screens.

PLAN:
{
  "version": 1,
  "archetype": "Tracker",
  "screens": [
    {
      "id": "dashboard",
      "role": "home",
      "purpose": "show summary",
      "key_components": [
        "List",
        "Text"
      ]
    },
    {
      "id": "add_entry",
      "role": "detail",
      "purpose": "add a new entry",
      "key_components": [
        "Form"
      ]
    }
  ],
  "navigation": "stack"
}"
`;
